force-app/main/default/objects/TripOpportunity__c/TripOpportunity__c.object-meta.xml
<CustomObject>
    <label>Opportunity Discussed</label>
    <nameField>
        <displayFormat>TO-{00000}</displayFormat>
        <label>tripopportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities Discussed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>