force-app/main/default/objects/TripOpportunity__c/fields/TripReport__c.field-meta.xml
<CustomField>
    <fullName>TripReport__c</fullName>
    <label>Trip Report</label>
    <referenceTo>Trip_Report__c</referenceTo>
    <relationshipLabel>Opportunities Discussed</relationshipLabel>
    <relationshipName>Opportunities_Discussed</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>